# lidar_processing

./: .gitignore  CMakeLists.txt  README.md  package.xml
ConesLiDAR_ws/src/lidar_cones_detection/: CMakeLists.txt  package.xml
cfg/: LidarCone.cfg
config/: crop.json  lidar_cone.yaml  lidar_processing.yaml  segmenter.yaml
docs/: future_improvements.md
include/lidar_cone_detection/: defines.h  lidar_cone.h  lidar_cone.hpp  robin_hood.h  turbo_colourmap.inc
include/lidar_cones_detection/: Cluster.hpp  ConeSegment.hpp  GroundRemoval.hpp  IOUtility.hpp  ImageUtil.hpp  OnlineSegmentation.hpp  PCLWrapper.hpp  ProjectionParameters.hpp  Projector.hpp  UQRPointCloud.hpp  binDetectionNode.hpp  binDetector.hpp  cloudFilter.hpp  planeDetectionNode.hpp  planeDetector.hpp
include/lidar_processing/: FastDigitalImageInpainting.h  camera_matrices.h  defines.h  lidar_processing.h
launch/: depthmap.launch  lidar_cone.launch  segmenter.launch
scripts/: crop.json  generate_bbox_yaml.py  test.py
src/: Cluster.cpp  ConeSegment.cpp  GroundRemoval.cpp  IOUtility.cpp  ImageUtil.cpp  OnlineSegmentation.cpp  PCLWrapper.cpp  ProjectionParameters.cpp  Projector.cpp  UQRPointCloud.cpp  binDetectionNode.cpp  binDetector.cpp  cloudFilter.cpp  lidar_cone.cpp  lidar_processing.cpp  morphFilter.cpp  open3d_conversions.cpp  planeDetectionNode.cpp  planeDetector.cpp  sacSegmenter.cpp  segmentTest.cpp  test.cpp
