<?xml version="1.0"?>
<package format="3">
  <name>lidar_processing</name>
  <version>0.0.0</version>
  <description>UQRacing's LiDAR processing pipeline.</description>

  <maintainer email="m.young2@uqconnect.edu.au">Matt Young</maintainer>

  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>rclpy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>example_interfaces</build_depend>
  <build_depend>uqr_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <!--<build_depend>fssim_messages</build_depend>-->
  <build_depend>sensor_msgs</build_depend>
  <build_depend>Eigen3</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <!--<build_depend>ddynamic_reconfigure</build_depend>-->
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_geometry</build_depend>
  
  <build_export_depend>rclcpp</build_export_depend>
  <build_export_depend>rclpy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>example_interfaces</build_export_depend>
  <build_export_depend>uqr_msgs</build_export_depend>
  <!--<build_export_depend>fssim_messages</build_export_depend>-->
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>Eigen3</build_export_depend>
  <build_export_depend>visualization_msgs</build_export_depend>
  <!--<build_export_depend>ddynamic_reconfigure</build_export_depend>-->
  <build_export_depend>cv_bridge</build_export_depend>
  <build_export_depend>image_geometry</build_export_depend>
  
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>example_interfaces</exec_depend>
  <exec_depend>uqr_msgs</exec_depend>
  <!--<exec_depend>fssim_messages</exec_depend>-->
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>Eigen3</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <!--<exec_depend>ddynamic_reconfigure</exec_depend>-->
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>image_geometry</exec_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
